force-app/main/default/objects/Report_Submission__c/Report_Submission__c.object-meta.xml
<CustomObject>
    <label>Report Submission</label>
    <nameField>
        <displayFormat>RS-{000000000}</displayFormat>
        <label>Report Submission No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Report Submissions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>