force-app/main/default/objects/Report_Submission__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Report Submissions</relationshipLabel>
    <relationshipName>Report_Submissions</relationshipName>
    <type>Lookup</type>
</CustomField>