force-app/main/default/objects/Report_Submission__c/fields/All_Perf_data_reported_by_PRO__c.field-meta.xml
<CustomField>
    <fullName>All_Perf_data_reported_by_PRO__c</fullName>
    <label>All Perf data reported by PRO?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>