force-app/main/default/objects/Report_Submission__c/fields/Allocation_Description__c.field-meta.xml
<CustomField>
    <fullName>Allocation_Description__c</fullName>
    <label>Allocation Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>