force-app/main/default/objects/Report_Submission__c/fields/Allocation_Method__c.field-meta.xml
<CustomField>
    <fullName>Allocation_Method__c</fullName>
    <label>Allocation Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Proportion of tires marketed by each Producer by weight</fullName>
            </value>
            <value>
                <fullName>Proportion of tires collected by weight</fullName>
            </value>
            <value>
                <fullName>Proportion of tires hauled by weight</fullName>
            </value>
            <value>
                <fullName>Proportion of tires processed by weight</fullName>
            </value>
            <value>
                <fullName>A combination of the above</fullName>
            </value>
            <value>
                <fullName>Other method</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>