force-app/main/default/objects/Report_Submission__c/fields/Audit_Upload_Required__c.field-meta.xml
<CustomField>
    <fullName>Audit_Upload_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Audit Upload Required</label>
    <type>Checkbox</type>
</CustomField>