force-app/main/default/objects/Report_Submission__c/fields/Collection_Event__c.field-meta.xml
<CustomField>
    <fullName>Collection_Event__c</fullName>
    <label>Collection Event</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>