force-app/main/default/objects/Report_Submission__c/fields/Collection_Event_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Collection_Event_Date_Time__c</fullName>
    <label>Collection Event Date/Time</label>
    <type>DateTime</type>
</CustomField>