force-app/main/default/objects/Report_Submission__c/fields/Data_Locked_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Data_Locked_Date_Time__c</fullName>
    <label>Data Locked Date/Time</label>
    <type>DateTime</type>
</CustomField>