force-app/main/default/objects/Report_Submission__c/fields/Data_Verified_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Data_Verified_Date_Time__c</fullName>
    <label>Data Verified Date/Time</label>
    <type>DateTime</type>
</CustomField>