force-app/main/default/objects/Report_Submission__c/fields/Delegated__c.field-meta.xml
<CustomField>
    <fullName>Delegated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Delegated</label>
    <type>Checkbox</type>
</CustomField>