force-app/main/default/objects/Report_Submission__c/fields/Last_Allocation_Method_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Last_Allocation_Method_Date_Time__c</fullName>
    <label>Last Allocation Method Date/Time</label>
    <type>DateTime</type>
</CustomField>