force-app/main/default/objects/Report_Submission__c/fields/Last_Audit_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Last_Audit_Date_Time__c</fullName>
    <label>Last Audit Date/Time</label>
    <type>DateTime</type>
</CustomField>