force-app/main/default/objects/Report_Submission__c/fields/Last_Executive_Attachment_ID__c.field-meta.xml
<CustomField>
    <fullName>Last_Executive_Attachment_ID__c</fullName>
    <label>Last Executive Attachment ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>