force-app/main/default/objects/Report_Submission__c/fields/Last_Executive_Attestation_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Last_Executive_Attestation_Date_Time__c</fullName>
    <label>Last Executive Attestation Date/Time</label>
    <type>DateTime</type>
</CustomField>