force-app/main/default/objects/Report_Submission__c/fields/Last_RoleBrandAttachment_Name__c.field-meta.xml
<CustomField>
    <fullName>Last_RoleBrandAttachment_Name__c</fullName>
    <label>Last RoleBrandAttachment Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>