force-app/main/default/objects/Report_Submission__c/fields/Last_Services_Offered_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Last_Services_Offered_Date_Time__c</fullName>
    <label>Last Services Offered Date/Time</label>
    <type>DateTime</type>
</CustomField>