force-app/main/default/objects/Report_Submission__c/fields/Payment_Selected_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Payment_Selected_Date_Time__c</fullName>
    <label>Payment Selected Date/Time</label>
    <type>DateTime</type>
</CustomField>