force-app/main/default/objects/Report_Submission__c/fields/Producer_Account__c.field-meta.xml
<CustomField>
    <fullName>Producer_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Producer Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Report Submissions (Producer Account)</relationshipLabel>
    <relationshipName>Report_Submissions1</relationshipName>
    <type>Lookup</type>
</CustomField>