force-app/main/default/objects/Report_Submission__c/fields/Program__c.field-meta.xml
<CustomField>
    <fullName>Program__c</fullName>
    <formula>TEXT(Registration_Detail__r.Program__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Program</label>
    <type>Text</type>
</CustomField>