force-app/main/default/objects/Report_Submission__c/fields/Registration_Detail__c.field-meta.xml
<CustomField>
    <fullName>Registration_Detail__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Registration Detail</label>
    <referenceTo>Registration_Detail__c</referenceTo>
    <relationshipLabel>Report Submissions</relationshipLabel>
    <relationshipName>Report_Submissions</relationshipName>
    <type>Lookup</type>
</CustomField>