force-app/main/default/objects/Report_Submission__c/fields/Report_Audit_Report__c.field-meta.xml
<CustomField>
    <fullName>Report_Audit_Report__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Report: Audit Report</label>
    <type>Checkbox</type>
</CustomField>