force-app/main/default/objects/Report_Submission__c/fields/Report_Code__c.field-meta.xml
<CustomField>
    <fullName>Report_Code__c</fullName>
    <label>Report Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>