force-app/main/default/objects/Report_Submission__c/fields/Report_Collection_Event__c.field-meta.xml
<CustomField>
    <fullName>Report_Collection_Event__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Report: Collection Event</label>
    <type>Checkbox</type>
</CustomField>