force-app/main/default/objects/Report_Submission__c/fields/Report_Collector__c.field-meta.xml
<CustomField>
    <fullName>Report_Collector__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Report: Collector</label>
    <type>Checkbox</type>
</CustomField>