force-app/main/default/objects/Report_Submission__c/fields/Report_Executive_Attestation__c.field-meta.xml
<CustomField>
    <fullName>Report_Executive_Attestation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Report: Executive Attestation</label>
    <type>Checkbox</type>
</CustomField>