force-app/main/default/objects/Report_Submission__c/fields/Report_Hauler__c.field-meta.xml
<CustomField>
    <fullName>Report_Hauler__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Report: Hauler</label>
    <type>Checkbox</type>
</CustomField>