force-app/main/default/objects/Report_Submission__c/fields/Report_Payment__c.field-meta.xml
<CustomField>
    <fullName>Report_Payment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Report: Payment</label>
    <type>Checkbox</type>
</CustomField>