force-app/main/default/objects/Report_Submission__c/fields/Report_PRO__c.field-meta.xml
<CustomField>
    <fullName>Report_PRO__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Report: PRO</label>
    <type>Checkbox</type>
</CustomField>