force-app/main/default/objects/Report_Submission__c/fields/Report_PRO_Allocation_Method__c.field-meta.xml
<CustomField>
    <fullName>Report_PRO_Allocation_Method__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Report: PRO Allocation Method</label>
    <type>Checkbox</type>
</CustomField>