force-app/main/default/objects/Report_Submission__c/fields/Report_PRO_Services__c.field-meta.xml
<CustomField>
    <fullName>Report_PRO_Services__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Report: PRO Services</label>
    <type>Checkbox</type>
</CustomField>