force-app/main/default/objects/Report_Submission__c/fields/Report_Processor__c.field-meta.xml
<CustomField>
    <fullName>Report_Processor__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Report: Processor</label>
    <type>Checkbox</type>
</CustomField>