force-app/main/default/objects/Report_Submission__c/fields/Report_Producer__c.field-meta.xml
<CustomField>
    <fullName>Report_Producer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Report: Producer</label>
    <type>Checkbox</type>
</CustomField>