force-app/main/default/objects/Report_Submission__c/fields/Report_Retreader__c.field-meta.xml
<CustomField>
    <fullName>Report_Retreader__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Report: Retreader</label>
    <type>Checkbox</type>
</CustomField>