force-app/main/default/objects/Report_Submission__c/fields/Report_Roles_Brands__c.field-meta.xml
<CustomField>
    <fullName>Report_Roles_Brands__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Report: Roles &amp; Brands</label>
    <type>Checkbox</type>
</CustomField>