force-app/main/default/objects/Report_Submission__c/fields/Report_Supply_Data__c.field-meta.xml
<CustomField>
    <fullName>Report_Supply_Data__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Report: Supply Data</label>
    <type>Checkbox</type>
</CustomField>