force-app/main/default/objects/Report_Submission__c/fields/Requirements_Updated__c.field-meta.xml
<CustomField>
    <fullName>Requirements_Updated__c</fullName>
    <label>Requirements Updated</label>
    <type>DateTime</type>
</CustomField>