force-app/main/default/objects/Report_Submission__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <formula>TEXT( Registration_Detail__r.Role__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Role</label>
    <type>Text</type>
</CustomField>