force-app/main/default/objects/Report_Submission__c/fields/Submitted_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Submitted_Date_Time__c</fullName>
    <label>Report Submitted Date/Time</label>
    <type>DateTime</type>
</CustomField>