force-app/main/default/objects/Report_Submission__c/fields/Table1_Date__c.field-meta.xml
<CustomField>
    <fullName>Table1_Date__c</fullName>
    <label>Table1 Date</label>
    <type>DateTime</type>
</CustomField>