force-app/main/default/objects/Report_Submission__c/fields/Table2_Date__c.field-meta.xml
<CustomField>
    <fullName>Table2_Date__c</fullName>
    <label>Table2 Date</label>
    <type>DateTime</type>
</CustomField>