force-app/main/default/objects/Report_Submission__c/fields/Table3_Date__c.field-meta.xml
<CustomField>
    <fullName>Table3_Date__c</fullName>
    <label>Table3 Date</label>
    <type>DateTime</type>
</CustomField>